fixed spacing icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ margin-top: 20px;}
 .entry_icons img{
 	margin-right: 5px;
 	height: 25px;
+	width: 25px;
 	opacity: 53.333%;
 }
 .entry_icons img:hover{
